--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,7 +13,7 @@ a {
 
 form{
 
-	background-color:#7fffd4;
+	background-color: transparent;
 	padding: 20px;
 	border-radius: 15px;
 	margin: 0 auto;
