--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,17 @@ a {
   color: #00B7FF;
 }
 
+h1 {
+	color: white;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	width: 40%;
+	border-radius: 10px;
+	background-color: rgba(0,0,0,0.5);
+}
+
 form{
 
 	background-color: transparent;
