--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@ a {
   color: #00B7FF;
 }
 
-h1 {
+#head {
 	color: white;
 	margin-left: auto;
 	margin-right: auto;
@@ -30,6 +30,8 @@ form{
 	margin: 0 auto;
 	width: 50%;
 }
+
+
 
 #submit-animal {
 	margin: 0 10px;
